sass/beauty.scss
$links-hover-color: #39ff14;
$shadows-color: grey;

html {
    background: white;
}

body{
    top: 4px;
    padding: 0px;
    margin: 0px;
    position: absolute;
    left: 25%;
    width: 50%;
    font-family: "Arial", "Liberation Sans";
    font-size: calc(15px + 0.390625vw);
    line-height: 1.5;
}

h1 {
    font-size: 1.8rem;
}
h2 {
    filter: drop-shadow(1px 1px 2px $shadows-color);
    line-height: 1.1;
    font-size: 1.4rem;
}
h3 {
    font-size: 1.2rem;
}

a {
   text-decoration: none;

   &:visited { 
   }

   &:hover {
      color: $links-hover-color;
   }
}

.wide {
    display: block;
    width: 100%;
}

.footerImage {
    border-radius: 10px; 
    width: 100% ; 
    box-shadow: 1px 1px 3px var(--shadows-color);
}

iframe {
    width: 100%;
    aspect-ratio: 640 / 360;
}

figcaption {
    text-align: center;
    font-size: initial;
    font-style: italic;
}

div.centered {
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    padding: 20px;
    box-sizing: border-box;  
}

nav {
    width: 100%;
    background-color: rgba(255,255,255,0.2);
    backdrop-filter: blur(10px);
    margin-bottom: 1em;

    & > div {
      filter: drop-shadow(2px 2px 4px $shadows-color); 
    }

    .menu {
      display: block;
      border-bottom: dashed;

      a {
        text-decoration: none;
        color: black;
        padding: 10px;
        margin: 0px;
        display: inline-block;
        width: calc(25% - 25px);
        font-size: 1.3rem;
        text-align: center;

        &:visited {
          color: black;
        } 
      }
    }
}


/* CONTENTS */

#index-img {
    translate: -2px 10%; 
    border-radius: 10px; 
    width: calc(100% + 4px); 
    box-shadow: 1px 1px 3px $shadows-color;
}

.people {
    display: flex;
    flex-flow: wrap;
    a {
        hyphens: auto;
    }
    img {
        width: 100%;
        object-fit: cover;
        filter: saturate(95%) hue-rotate(5deg);
        box-shadow: 2px 2px 7px $shadows-color;
        margin-bottom: 6px;
    }
    
    img:hover {
        filter: none;
        filter: saturate(120%) hue-rotate(-5deg);
    }

    & > div {
        display: flex;
        width: calc(25% - 20px);
        margin: 10px;
    }
}

img.grid-item {
  margin-bottom: 10px;
  border-radius: 4px;
}

#member {
    display: flex;
    flex-flow: wrap;

    & > div {
        width: calc(50% - 10px);
        display: block;
        flex-direction: row;
        margin: 5px;
    }
}

.archive {
    display: flex;
    flex-flow: wrap;
    div {
        width: calc(50% - 20px );
        aspect-ratio: 1;
        margin: 10px;
        display: flex;
    }
    img {
        min-width: 100%;
        min-height: 100%;
        width: auto;
        height: 100%;
        object-fit: cover;
        filter: drop-shadow(2px 2px 4px $shadows-color);
    }
}

footer {
    display: flex;
    color: white;
    background-color: black;
    padding: 12px;
    margin: -2px;
    margin-top: 6px;
    border-radius: 15px 15px 0px 0px;
    filter: drop-shadow(2px 2px 4px $shadows-color);
    line-height: 1.5rem;
    font-size: 0.9rem;

    a, a:visited {
      color: white;
    }
    a:hover {
      color: $links-hover-color;
    }
    img {
        width: 10%;
        display: inline;
        translate: 0% 20%;
    }
    & > div {
        width: 33.3%;
        padding-left: 10px;
    }
}

@media (max-width: 1400px) {
    body {
        left: 15%;
        width: 70%;  
    }
}


@media (max-width: 1000px) {
    body {
        left: 4px;
        width: calc(100% - 8px);
    }
    
    #fun {
        overflow: hidden;
    }
    
   .people > div{
        display: flex;
        width: calc(33% - 10px);
        margin: 5px;
    }
}

#debug {
    display: none;
    margin: 50px;
    padding: 50px;
    border: 1px solid pink;
    overflow: scroll;
    font-size: small;
}

